apps/media/radarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: radarr
      sectionName: radarr
  hostnames:
    - radarr.i.recompiled.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: oauth2-proxy
          namespace: auth
          port: 4180
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: radarr
          port: 7878
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExternalAuth
          externalAuth:
            protocol: HTTP
            backendRef:
              name: oauth2-proxy
              namespace: auth
              port: 4180
            http:
              allowedHeaders:
                - Cookie
                - Accept
                - X-Forwarded-For
              allowedResponseHeaders:
                - X-Auth-Request-User
                - X-Auth-Request-Email
      backendRefs:
        - name: radarr
          port: 7878
