apps/media/radarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-api
  namespace: media
  labels:
    app: radarr
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/target: traefik.i.recompiled.org
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.i.recompiled.org`) && PathPrefix(`/api`)
      kind: Rule
      priority: 100
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: radarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-web
  namespace: media
  labels:
    app: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.i.recompiled.org`)
      kind: Rule
      priority: 50
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: oauth2-proxy
          namespace: auth
  tls:
    secretName: radarr-tls
